# GoCL

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  GoCL.conf  LICENSE-APACHE.txt  LICENSE.txt  NOTICE.txt  README.md  SUPPORT.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build_linux.yaml  build_windows.yaml  gocl_tests.yml  release.yaml
LICENSES/: LICENSE-3RD-PARTY.txt  LICENSE-APACHE.txt  LICENSE.txt  NOTICE.txt
benchmarks/gtx960m-bench/: benchmark_report.md
docs/: ARCHITECTURE.md  DETAILS.md
donate/: index.md
src/core/: ASTCThresholds.h  CapabilityOracle.cpp  CapabilityOracle.h  ConfigLoader.cpp  ConfigLoader.h  ConfigSingleton.h  DGCManager.cpp  DGCManager.h  GoCLContext.cpp  GoCLContext.h  HardwareHint.h
src/layer/: Proxy.cpp  VkLayer_GoCL_Proxy.json.in
src/render/: ASTCBlockSelector.h  CommandPool.cpp  CommandPool.h  DynamicResolutionHelper.cpp  DynamicResolutionHelper.h  ETC2Transcode.cpp  FrameLoop.cpp  FrameLoop.h  FrameSync.cpp  FrameSync.h  LegacyShaderEmulator.cpp  LegacyShaderEmulator.h  MeshletCuller.cpp  MeshletCuller.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderPass.cpp  RenderPass.h  Swapchain.cpp  Swapchain.h  TextureManager.cpp  TextureManager.h  VRAMBudgetTracker.h
tests/: GoCLCapabilityTest.cpp  GoCLContextTest.cpp  GoCLDynamicResolutionTest.cpp  GoCLMeshletCullerTest.cpp  GoCLPushConstantTest.cpp  GoCLShaderTest.cpp  GoCLTextureTest.cpp
tests/data/: passthrough.frag  passthrough.vert
